# serzh_homework

./: .env_template  .gitignore  README.md  main.py  main_processing.py  main_widget.py  pyproject.toml  user_settings.json
src/: masks.py  processing.py  widget.py
src/analysis_bank/: file_handlers.py  main.py  models.py  reports.py  services.py  utils.py  views.py
src/bank_operations/: decorators.py  generators.py  masks.py  processing.py  widget.py
src/pythonproject/: __init__.py  generators.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_decorators.py  test_file_handlers.py  test_generators.py  test_masks.py  test_processing.py  test_reports.py  test_services.py  test_utils.py  test_views.py  test_widget.py
