[project]
name = "pythonproject"
version = "0.1.0"
description = "My Python Project"
authors = [
    {name = "Serzh Ivashchenko", email = "serzh466163@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8.1,<=3.13.3"
dependencies = []

[tool.poetry]
packages = [
    {include = "pythonproject", from = "src"}
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^6.0.0"

[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.8"
warn_return_any = true
disallow_untyped_defs = true