[project]
name = "pythonproject"
version = "0.1.0"
description = "My Python Project"
authors = [
    { name = "Serzh Ivashchenko", email = "serzh466163@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<=3.13.3"
dependencies = [
    "openpyxl>=3.1.5,<4.0.0",
    "xlrd>=2.0.1,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "flake8>=6.0.0,<7.0.0",
    "pytest-cov>=6.1.1,<7.0.0",
    "pandas-stubs>=2.2.3; python_version >= '3.10'",
]
lint = [
    "black>=23.3.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.3.0,<2.0.0",
]

[tool.poetry]
# Оставьте эту секцию для обратной совместимости
# или если используете специфические функции Poetry
packages = [
    { include = "bank_operations", from = "src" },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html"
filterwarnings = [
    "ignore::UserWarning",
]

[tool.coverage.run]
omit = ["*/tests/*"]
source = ["src"]
branch = true

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.10"
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "reports.*",
    "services.*",
    "utils.*",
    "views.*"
]
ignore_missing_imports = true
